Dev deps should not be in the built container
This PR moves the `*-dev` packages to the virtual storage so that they are not part of the built container.

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -11,10 +11,12 @@ RUN apk add --no-cache \
         icu-libs \
         git \
         unzip \
-        libzip-dev \
-        zlib-dev && \
+        libzip \
+        zlib && \
     apk add --no-cache --virtual .build-deps \
         $PHPIZE_DEPS \
+        libzip-dev \
+        zlib-dev \
         icu-dev && \
     docker-php-ext-install \
         intl \
